# socraticbtc

./: .gitignore  README.md  cli.py  pyproject.toml  translate_batch.py
.github/workflows/: pipeline.yml
data/: optech.json  optech_ko.json  reviews.json  reviews_ko.json
pipeline/: __init__.py  translate.py
scrapers/: __init__.py  bitcoincore_reviews.py  github_fetch.py  optech.py
site/: package-lock.json  package.json  tailwind.config.mjs
site/src/components/: ContentCard.astro  DetailView.astro
site/src/data/: optech.json  optech_ko.json  reviews.json  reviews_ko.json
site/src/layouts/: BaseLayout.astro
site/src/pages/: index.astro
site/src/pages/newsletter/: [id].astro
site/src/pages/reviews/: [id].astro
