[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "socraticbtc"
version = "0.1.0"
description = "Bitcoin Core PR Review and Optech Newsletter scraper with Korean translation"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anthropic>=0.25",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
socraticbtc = "cli:cli"
